--- a/2. CienciaAnaliticaDatos/Unidad1/trabajo2.ipynb
+++ b/2. CienciaAnaliticaDatos/Unidad1/trabajo2.ipynb
@@ -473,9 +473,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_42092/2048793805.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df_train['Embarked'].replace(['Q','S', 'C'],[0,1,2],inplace=True)\n",
+      "/tmp/ipykernel_42092/2048793805.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df_train['Embarked'].replace(['Q','S', 'C'],[0,1,2],inplace=True)\n",
+      "/tmp/ipykernel_42092/2048793805.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df_test['Embarked'].replace(['Q','S', 'C'],[0,1,2],inplace=True)\n",
+      "/tmp/ipykernel_42092/2048793805.py:3: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  df_test['Embarked'].replace(['Q','S', 'C'],[0,1,2],inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
     "#Transforma los datos de embarque (categórico) en números\n",
     "df_train['Embarked'].replace(['Q','S', 'C'],[0,1,2],inplace=True)\n",
@@ -484,9 +509,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29.69911764705882\n",
+      "30.272590361445783\n"
+     ]
+    }
+   ],
    "source": [
     "#Reemplazo los datos faltantes en la edad por la media de esta variable\n",
     "print(df_train[\"Age\"].mean())\n",
@@ -498,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,9 +579,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Survived    0\n",
+      "Pclass      0\n",
+      "Sex         0\n",
+      "Age         0\n",
+      "SibSp       0\n",
+      "Parch       0\n",
+      "Fare        0\n",
+      "Embarked    0\n",
+      "dtype: int64\n",
+      "PassengerId    0\n",
+      "Pclass         0\n",
+      "Sex            0\n",
+      "Age            0\n",
+      "SibSp          0\n",
+      "Parch          0\n",
+      "Fare           0\n",
+      "Embarked       0\n",
+      "dtype: int64\n",
+      "(889, 8)\n",
+      "(417, 8)\n",
+      "   PassengerId  Pclass  Sex Age  SibSp  Parch     Fare  Embarked\n",
+      "0          892       3    1   5      0      0   7.8292         0\n",
+      "1          893       3    0   6      1      0   7.0000         1\n",
+      "2          894       2    1   7      0      0   9.6875         0\n",
+      "3          895       3    1   5      0      0   8.6625         1\n",
+      "4          896       3    0   4      1      1  12.2875         1\n",
+      "   Survived  Pclass  Sex Age  SibSp  Parch     Fare  Embarked\n",
+      "0         0       3    1   4      1      0   7.2500       1.0\n",
+      "1         1       1    0   5      1      0  71.2833       2.0\n",
+      "2         1       3    0   5      0      0   7.9250       1.0\n",
+      "3         1       1    0   5      1      0  53.1000       1.0\n",
+      "4         0       3    1   5      0      0   8.0500       1.0\n"
+     ]
+    }
+   ],
    "source": [
     "#Verifica los datos\n",
     "print(pd.isnull(df_train).sum())\n",
