--- a/2. CienciaAnaliticaDatos/Unidad1/trabajo2.ipynb
+++ b/2. CienciaAnaliticaDatos/Unidad1/trabajo2.ipynb
@@ -249,7 +249,7 @@
     }
    ],
    "source": [
-    "#Importar los datos de los archivos .csv almacenados\n",
+    "#Importar los datos de los archivos .csv almacenados  https://github.com/dsindy/kaggle-titanic/tree/master\n",
     "df_test = pd.read_csv('data/test.csv')\n",
     "df_train = pd.read_csv('data/train.csv')\n",
     "\n",
